[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaXTools"
version = "1.118.2"
description = "MetaXTools is a novel tool for linking peptide sequences with taxonomic and functional information in Metaproteomics."
readme = "README_PyPi.md"
license = { text = "NorthOmics" }
authors = [
    { name = "Qing Wu", email = "byeomax@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["MetaX", "MetaXTools", "metaproteomics", "peptide", "OTF", "Operational Taxa-Functions", "visualization", "analysis"]
requires-python = ">=3.10"
dependencies = [
    "distinctipy>=1.2.2",
    "matplotlib>=3.7.2",
    "numpy>=1.25.1",
    "pandas>=2.0.3",
    "pydeseq2>=0.4.11",
    "pyecharts>=2.0.6",
    "PyQt5>=5.15.9",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.12.1",
    "PyQtWebEngine>=5.15.6",
    "PyQtWebEngine-Qt5>=5.15.2",
    "python-dateutil>=2.8.2",
    "qt-material>=2.14",
    "QtAwesome>=1.2.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.3",
    "tqdm>=4.65.0",
    "scikit-bio>=0.6.0",
    "adjustText>=1.1.1",
    "openpyxl",
    "pyproject-toml>=0.0.10",
    "statsmodels",
    "seaborn>=0.13.2",
    "numba>=0.60.0",
]

[project.scripts]
metax = "metax.gui.main_gui:runGUI"

[tool.setuptools.packages.find]
where = ["."]
include = ["metax", "metax.*"]

[tool.setuptools.package-data]
metax = ["data/example_data/*"]

[project.urls]
Homepage = "https://github.com/byemaxx/MetaX"
Issues = "https://github.com/byemaxx/MetaX/issues"
