[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaXTools"
dynamic = ["version"]
description = "MetaXTools is a novel tool for linking peptide sequences with taxonomic and functional information in Metaproteomics."
readme = "README_PyPi.md"
license = "LicenseRef-My-Custom-License"
license-files = ["LICENSE"]
authors = [
    { name = "Qing Wu", email = "byeomax@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["MetaX", "MetaXTools", "metaproteomics", "peptide", "OTF", "Operational Taxa-Functions", "visualization", "analysis"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25.1",
    "pandas>=2.0.3",
    "pyarrow>=15.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "metaumbra>=1.4.0",
]

[project.optional-dependencies]
analyzer = [
    "inmoose==0.9.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.3",
    "joblib>=1.3.0",
    "statsmodels",
    "numba>=0.60.0",
]
report = [
    "inmoose==0.9.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.3",
    "joblib>=1.3.0",
    "statsmodels",
    "numba>=0.60.0",
    "distinctipy>=1.2.2",
    "matplotlib>=3.7.2",
    "pyecharts>=2.0.6",
    "adjustText>=1.1.1",
    "Jinja2>=3.1",
    "seaborn>=0.13.2",
    "UpSetPlot>=0.9.0",
]
gui = [
    "inmoose==0.9.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.3",
    "joblib>=1.3.0",
    "statsmodels",
    "numba>=0.60.0",
    "distinctipy>=1.2.2",
    "matplotlib>=3.7.2",
    "pyecharts>=2.0.6",
    "adjustText>=1.1.1",
    "Jinja2>=3.1",
    "seaborn>=0.13.2",
    "UpSetPlot>=0.9.0",
    "ipykernel",
    "openpyxl",
    "packaging",
    "requests>=2.31.0",
    "PyQt5>=5.15.9",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.12.1",
    "PyQtWebEngine>=5.15.6",
    "PyQtWebEngine-Qt5>=5.15.2",
    "qt-material==2.14",
    "QtAwesome>=1.2.3",
    "metaumbra[gui-pyqt5]>=1.4.0"
]
full = [
    "inmoose==0.9.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.3",
    "joblib>=1.3.0",
    "statsmodels",
    "numba>=0.60.0",
    "distinctipy>=1.2.2",
    "matplotlib>=3.7.2",
    "pyecharts>=2.0.6",
    "adjustText>=1.1.1",
    "Jinja2>=3.1",
    "seaborn>=0.13.2",
    "UpSetPlot>=0.9.0",
    "ipykernel",
    "openpyxl",
    "packaging",
    "requests>=2.31.0",
    "PyQt5>=5.15.9",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.12.1",
    "PyQtWebEngine>=5.15.6",
    "PyQtWebEngine-Qt5>=5.15.2",
    "qt-material==2.14",
    "QtAwesome>=1.2.3",
    "metaumbra[gui-pyqt5]>=1.4.0"
]

[project.scripts]
metax = "metax.gui.launcher:main"
metax-annotate = "metax.cli.annotate:main"
metax-report = "metax.cli.report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metax", "metax.*"]

[tool.setuptools.dynamic]
version = {attr = "metax.utils.version.__version__"}

[tool.setuptools.package-data]
metax = [
    "data/*",
    "data/example_data/*",
    "assets/pyecharts/*.js",
    "report/templates/*.j2",
]

[project.urls]
Homepage = "https://github.com/byemaxx/MetaX"
Issues = "https://github.com/byemaxx/MetaX/issues"
